font issue on mobile

--- a/main.css
+++ b/main.css
@@ -1,4 +1,12 @@
-@import url(https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&display=swap);
+/* josefin-sans-regular - latin */
+@font-face {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/josefin-sans-v17-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/josefin-sans-v17-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
 *{
     box-sizing: border-box;
 }
